[tool.poetry]
name = "hpn-dashboard"
version = "0.1.0"
description = ""
authors = ["Jack McPherson"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = {version = "^2.1.1", python = ">=3.10,<3.13"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
